<resources>
    <string name="app_name">Task_Timer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menutitle_addTask">Add Task</string>
    <string name="showDurations">Durations Report</string>
    <string name="menuMain_showAbout">About TaskTime</string>
    <string name="menuMain_generate">Generate Data</string>
    <string name="no_task_selected">No Task Selected</string>
    <string name="task_timer_application">Task Timer Application</string>
    <string name="edit_button_description">Button to edit task details</string>
    <string name="delete_button_description">Button to delete task</string>
    <string name="description">description</string>
    <string name="addedit_description">description</string>
    <string name="addedit_name">name</string>
    <string name="addedit_sortorder">sort order</string>
    <string name="addedit_name_hint">Task Name: required</string>
    <string name="addedit_description_hint">Task Description (optional)</string>
    <string name="addedit_sort_hint">Orders: sorts low to high</string>
    <string name="addedit_save_text">SAVE</string>
    <string name="title_activity_add_edit">AddEditActivity</string>
    <string name="instructions_heading">Instructions</string>
    <string name="instructions">Use the add button (+) in the toolbar above to create new tasks.\n\nTasks with lower
        sort orders will be placed higher up in the list. Tasks with the same sort order will be sorted
        alphabetically.\n\nTapping a task will start the timer for that task (and will stop the timer for any previous
        task that was being timed\n\nEach task has Edit and Delete buttons if you want to change the details and remove
        the task.
    </string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="deldiag_postitive_caption">Delete</string>
    <string name="deldiag_message">Deleting will also delete all timing data associated with task id %1$d: %2$s.</string>
</resources>