<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/content_add_edit"
              android:paddingTop="?android:attr/actionBarSize">


    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:ems="10"
            android:id="@+id/addedit_name" android:maxLength="64"
            android:hint="@string/addedit_name_hint"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/addedit_description" android:maxLength="256"
            android:hint="@string/addedit_description_hint"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/addedit_sortorder" android:maxLength="9"
            android:hint="@string/addedit_sort_hint"/>
    <Button
            android:text="@string/addedit_save_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/addedit_save" android:layout_marginTop="8dp"
            android:drawableLeft="@android:drawable/ic_menu_save"
            android:drawableStart="@android:drawable/ic_menu_save"/>
</LinearLayout>